--- a/sic/templates/account.html
+++ b/sic/templates/account.html
@@ -1,8 +1,10 @@
 {% extends "base.html" %}
 {% block title %}sic{% endblock %}
 {% block content %}
+<div style="grid-row: 1/ span 1;">
 <a href="{% url 'edit_profile' %}">edit profile</a>
 <a href="{{ user.get_absolute_url }}">view profile</a>
+</div>
 <div class="profile">
   <label for="username">username:</label>
   <div id="username">{{ user.username }}</div>
@@ -22,6 +24,6 @@
   <div id="stories">{{ user.stories.count }}</div>
   <label for="comments">comments:</label>
   <div id="comments">{{ user.comments.count }}</div>
-  <div id="avatar"><img src="{{ user.avatar }}"><a href="{% url 'edit_avatar' %}">edit avatar</a></div>
+  <div id="avatar">{% if user.avatar %}<div id="avatar-thumbnail" style="background-image: url({{user.avatar}});"><img src="{{ user.avatar }}"></div>{% else %}None.{%endif %}<a href="{% url 'edit_avatar' %}">edit avatar</a></div>
 </div>
 {% endblock %}
