--- a/sic/templates/profile.html
+++ b/sic/templates/profile.html
@@ -14,12 +14,14 @@
   <div id="status">active</div>
   <label for="joined">joined:</label>
   <div id="joined">{{ user.created }}</div>
+  <label for="invited_by">invited by:</label>
+  <div id="invited_by">{{ user.invited_by.inviter }}</div>
   <label for="karma">karma:</label>
   <div id="karma">{{ user.karma }}</div>
   <label for="stories">stories:</label>
   <div id="stories">{{ user.stories.count }}</div>
   <label for="comments">comments:</label>
   <div id="comments">{{ user.comments.count }}</div>
-  <div id="avatar"><img src="{{ user.avatar }}"></div>
+  <div id="avatar">{% if user.avatar %}<div id="avatar-thumbnail" style="background-image: url({{user.avatar}});"><img src="{{ user.avatar }}"></div>{% else %}None.{%endif %}</div>
 </div>
 {% endblock %}
