--- a/sic/templates/base.html
+++ b/sic/templates/base.html
@@ -40,7 +40,7 @@
                     <nav class="user">
                       <ul>
                         <li><a href="{% url 'login' %}">Login</a></li>
-                        <li><a href="{% url 'login' %}">Sign up</a></li>
+                        <li><details id="signup-details" title="You will need an invitation from an existing user to join."><summary><a href="">Sign up</a></summary></details></li>
                       </ul>
                     </nav>
                     {% endif %}
