--- a/sic/templates/story.html
+++ b/sic/templates/story.html
@@ -4,6 +4,7 @@
     <article>
         <header>
             <h1 class="story-title"><a href="{{story.get_absolute_url}}">{{ story.title }}</a></h1>
+            <div class="links">{% if story.user.avatar %}<img class="avatar-small" src="{{story.user.avatar}}" height="1ex">{% endif %}{% if story.user_is_author %}authored by{% else %}via{% endif %} <a href="{{ story.user.get_absolute_url }}">{{ story.user }}</a> {{ story.created }} | flag | hide | save | archived copy | <a href="{{story.get_absolute_url}}">{{ story.comments.count }} comments</a></div>
         </header>
         <a href="{{story.url}}">{{ story.url }}</a>
         {% if story.description %}
