--- a/sic/templates/index.html
+++ b/sic/templates/index.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load humanize %}
 {% block title %}sic{% endblock %}
 {% block content %}
 <ul class="stories">
@@ -20,7 +21,7 @@
     <div class="title">
       <a href="{{story.get_absolute_url}}">{{ story.title }}</a>
     </div>
-    <div class="links">{% if story.user.avatar %}<img class="avatar-small" src="{{story.user.avatar}}" height="1ex">{% endif %}{% if story.user_is_author %}authored by{% else %}via{% endif %} <a href="{{ story.user.get_absolute_url }}">{{ story.user }}</a> {{ story.created }} | flag | hide | save | archived copy | <a href="{{story.get_absolute_url}}">{{ story.comments.count }} comments</a></div>
+    <div class="links">{% if story.user.avatar %}<img class="avatar-small" src="{{story.user.avatar}}" height="1ex">{% endif %}{% if story.user_is_author %}authored by{% else %}via{% endif %} <a href="{{ story.user.get_absolute_url }}">{{ story.user }}</a> <time datetime="{{ story.created | date:"Y-m-d H:i:s" }}" title="{{ story.created }}"> {{ story.created|naturaltime }}</time> | flag | hide | save | archived copy | <a href="{{story.get_absolute_url}}">{{ story.comments.count }} comments</a></div>
     {% endspaceless %}
   </li>
   {% endfor %}
