Use Story url instead of story page if available

--- a/sic/templates/index.html
+++ b/sic/templates/index.html
@@ -19,7 +19,7 @@
       </div>
     </div>
     <div class="title">
-      <a href="{{story.get_absolute_url}}">{{ story.title }}</a>
+      <a href="{{story.get_listing_url}}">{{ story.title }}</a>
     </div>
     <div class="links">{% if story.user.avatar %}<img class="avatar-small" src="{{story.user.avatar}}" height="1ex">{% endif %}{% if story.user_is_author %}authored by{% else %}via{% endif %} <a href="{{ story.user.get_absolute_url }}">{{ story.user }}</a> <time datetime="{{ story.created | date:"Y-m-d H:i:s" }}" title="{{ story.created }}"> {{ story.created|naturaltime }}</time> | flag | hide | save | archived copy | <a href="{{story.get_absolute_url}}">{{ story.comments.count }} comments</a></div>
     {% endspaceless %}
