--- a/sic/templates/story.html
+++ b/sic/templates/story.html
@@ -4,7 +4,7 @@
 {% block content %}
     <article>
         <header>
-            <h1 class="story-title"><a href="{{story.get_absolute_url}}">{{ story.title }}</a></h1>
+            <h1 class="story-title"><a href="{{story.get_listing_url}}">{{ story.title }}</a></h1>
             <div class="links">{% if story.user.avatar %}<img class="avatar-small" src="{{story.user.avatar}}" height="1ex">{% endif %}{% if story.user_is_author %}authored by{% else %}via{% endif %} <a href="{{ story.user.get_absolute_url }}">{{ story.user }}</a> <time datetime="{{ story.created | date:"Y-m-d H:i:s" }}" title="{{ story.created }}">{{ story.created|naturaltime }}</time> | flag | hide | save | archived copy | <a href="{{story.get_absolute_url}}">{{ story.comments.count }} comments</a></div>
         </header>
         <a href="{{story.url}}">{{ story.url }}</a>
