--- a/sic/templates/comment.html
+++ b/sic/templates/comment.html
@@ -1,7 +1,8 @@
+{% load humanize %}
 <li class="comment">
     <details class="comment{% if not comment.replies.exists %} no-children{% endif %}" open="open">
         <summary>
-            <span class="links"><a href="{{ comment.user.get_absolute_url }}">{{ comment.user }}</a> {{ comment.created }} | <a href="{{comment.get_absolute_url}}">link</a> | <label class="reply" for="reply-{{comment.pk}}"><a href="">reply</a></label>
+            <span class="links"><a href="{{ comment.user.get_absolute_url }}">{{ comment.user }}</a> <time datetime="{{ comment.created | date:"Y-m-d H:i:s" }}" title="{{ comment.created }}">{{ comment.created|naturaltime }}</time> | <a href="{{comment.get_absolute_url}}">link</a> | <label class="reply" for="reply-{{comment.pk}}"><a href="">reply</a></label>
             </span>
             <span class="comment">{{ comment.text }}</span>
             <input class="reply" type="checkbox" id="reply-{{comment.pk}}" name="reply-{{comment.pk}}">
@@ -13,7 +14,7 @@
                 <input type="submit" value="Submit">
             </form>
         </summary>
-        {% if comment.replies.exists %}
+        {% if comment.replies.exists and not shallow %}
             {% for reply in comment.replies.all %}
                 {% include "comment.html" with comment=reply %}
             {% endfor %}
