--- a/sic/templates/index.html
+++ b/sic/templates/index.html
@@ -2,46 +2,46 @@
 {% load humanize %}
 {% block title %}sic{% endblock %}
 {% block content %}
-<ul class="stories">
-  {% for story in stories %}
-  <li>
-    {% spaceless %}
-    <div class="votes">
-      <div class="upvote{% if story.upvoted %} upvoted{% endif %}">
-        {% if request.user.is_authenticated %}
-        <form>
-          <input type="submit" formaction="{% url 'upvote_story' story.pk %}?next={{request.get_full_path|urlencode}}" formmethod="GET" value="">
-        </form>
-        {% endif %}
-      </div>
-      <div class="score">
-        {{story.karma}}
-      </div>
-    </div>
-    <div class="title">
-      <a href="{{story.get_listing_url}}">{{ story.title }}</a>
-    </div>
-    <div class="links">{% if story.user.avatar %}<img class="avatar-small" src="{{story.user.avatar}}" height="1ex">{% endif %}{% if story.user_is_author %}authored by{% else %}via{% endif %} <a href="{{ story.user.get_absolute_url }}">{{ story.user }}</a> <time datetime="{{ story.created | date:"Y-m-d H:i:s" }}" title="{{ story.created }}"> {{ story.created|naturaltime }}</time> | flag | hide | save | archived copy | <a href="{{story.get_absolute_url}}">{{ story.comments.count }} comments</a></div>
-    {% endspaceless %}
-  </li>
-  {% endfor %}
-</ul>
-<div class="pagination">
-    <span class="step-links">
-        {% if stories.has_previous %}
-            <a href="{% url 'index' %}">&laquo; first</a>
-            <a href="{% url 'index_page' stories.previous_page_number %}">&lt; previous</a>
-        {% endif %}
+    <ul class="posts">
+        {% for story in stories %}
+            <li class="story">
+                {% spaceless %}
+                    <div class="votes">
+                        <div class="upvote{% if story.upvoted %} upvoted{% endif %}">
+                            {% if request.user.is_authenticated %}
+                                <form>
+                                    <input type="submit" formaction="{% url 'upvote_story' story.pk %}?next={{request.get_full_path|urlencode}}" formmethod="GET" value="">
+                                </form>
+                            {% endif %}
+                        </div>
+                        <div class="score">
+                            {{story.karma}}
+                        </div>
+                    </div>
+                    <div class="title">
+                        <a href="{{story.get_listing_url}}">{{ story.title }}</a>
+                    </div>
+                    <div class="links">{% if story.user.avatar %}<img class="avatar-small" src="{{story.user.avatar}}" alt="user avatar">{% endif %}{% if story.user_is_author %}authored by{% else %}via{% endif %} <a href="{{ story.user.get_absolute_url }}">{{ story.user }}</a> <time datetime="{{ story.created | date:"Y-m-d H:i:s" }}" title="{{ story.created }}"> {{ story.created|naturaltime }}</time> | flag | hide | save | archived copy | <a href="{{story.get_absolute_url}}">{{ story.comments.count }} comments</a></div>
+                {% endspaceless %}
+            </li>
+        {% endfor %}
+    </ul>
+    <div class="pagination">
+        <span class="step-links">
+            {% if stories.has_previous %}
+                <a href="{% url 'index' %}">&laquo; first</a>
+                <a href="{% url 'index_page' stories.previous_page_number %}">&lt; previous</a>
+            {% endif %}
 
-        <span class="current">
-            Page {{ stories.number }}
+            <span class="current">
+                Page {{ stories.number }}
+            </span>
+
+            {% if stories.has_next %}
+                <a href="{% url 'index_page' stories.next_page_number %}">next &gt;</a>
+            {% else %}
+                (of {{stories.number}})
+            {% endif %}
         </span>
-
-        {% if stories.has_next %}
-            <a href="{% url 'index_page' stories.next_page_number %}">next &gt;</a>
-        {% else %}
-        (of {{stories.number}})
-        {% endif %}
-    </span>
-</div>
+    </div>
 {% endblock %}
