--- a/sic/static/style.css
+++ b/sic/static/style.css
@@ -424,6 +424,7 @@ main>ul.posts>li.story .votes{
 }
 main>ul.posts>li.story .title{
   grid-area: title;
+  display: flex;
 }
 main>ul.posts>li.story .links{
   grid-area: links;
@@ -671,6 +672,25 @@ details.comment>summary:before {
 details.reply>summary, details.comment>summary, details#signup-details>summary {
   display: block;
   padding-bottom: 1rem;
+}
+
+ul.tags {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+ul.tags>li {
+  display: inline;
+  background-color: var(--tag-color);
+  border: 1px solid #d5d458;
+  border-radius: 5px;
+  color: #555;
+  font-size: 8pt;
+  margin-left: 0.25em;
+  padding: 0px 0.4em 1px 0.4em;
+  text-decoration: none;
+  vertical-align: middle;
 }
 
 ul.posts li {
