--- a/sic/templates/index.html
+++ b/sic/templates/index.html
@@ -20,6 +20,7 @@
                     </div>
                     <div class="title">
                         <a href="{{story.get_listing_url}}">{{ story.title }}</a>
+                        {% include "story_tags.html" with tags=story.tags.all %}
                     </div>
                     <div class="links">{% if story.user.avatar %}<img class="avatar-small" src="{{story.user.avatar}}" alt="user avatar">{% endif %}{% if story.user_is_author %}authored by{% else %}via{% endif %} <a href="{{ story.user.get_absolute_url }}">{{ story.user }}</a> <time datetime="{{ story.created | date:"Y-m-d H:i:s" }}" title="{{ story.created }}"> {{ story.created|naturaltime }}</time> | flag | hide | save | archived copy | <a href="{{story.get_absolute_url}}">{{ story.comments.count }} comments</a></div>
                 {% endspaceless %}
