--- a/sic/templates/comment.html
+++ b/sic/templates/comment.html
@@ -1,8 +1,21 @@
 {% load humanize %}
+
 <li class="comment">
     <details class="comment{% if not comment.replies.exists %} no-children{% endif %}" open="open">
         <summary>
-            <span class="links"><a href="{{ comment.user.get_absolute_url }}">{{ comment.user }}</a> <time datetime="{{ comment.created | date:"Y-m-d H:i:s" }}" title="{{ comment.created }}">{{ comment.created|naturaltime }}</time> | <a href="{{comment.get_absolute_url}}">link</a> | <label class="reply" for="reply-{{comment.pk}}"><a href="">reply</a></label>
+            <span class="links"><span class="votes">
+                <span class="upvote{% if comment.upvoted %} upvoted{% endif %}">
+                    {% if request.user.is_authenticated %}
+                        <form action="{% url 'upvote_comment' comment.story.pk None comment.pk %}?next={{request.get_full_path|urlencode}}" method="POST">
+                            {% csrf_token %}
+                            <input type="submit" value="">
+                        </form>
+                    {% endif %}
+                </span>
+                <span class="score">
+                    {{comment.karma}}
+                </span>
+            </span> <a href="{{ comment.user.get_absolute_url }}">{{ comment.user }}</a> <time datetime="{{ comment.created | date:"Y-m-d H:i:s" }}" title="{{ comment.created }}">{{ comment.created|naturaltime }}</time> | <a href="{{comment.get_absolute_url}}">link</a> | <label class="reply" for="reply-{{comment.pk}}"><a href="">reply</a></label>
             </span>
             <span class="comment">{{ comment.text }}</span>
             <input class="reply" type="checkbox" id="reply-{{comment.pk}}" name="reply-{{comment.pk}}">
@@ -15,9 +28,11 @@
             </form>
         </summary>
         {% if comment.replies.exists and not shallow %}
-            {% for reply in comment.replies.all %}
-                {% include "comment.html" with comment=reply %}
-            {% endfor %}
+            <ul class="posts">
+                {% for reply in comment.replies.all %}
+                    {% include "comment.html" with comment=reply %}
+                {% endfor %}
+            </ul>
         {% endif %}
     </details>
 </li>
