--- a/sic/templates/comment.html
+++ b/sic/templates/comment.html
@@ -8,7 +8,7 @@
                     {% if request.user.is_authenticated %}
                         <form action="{% url 'upvote_comment' comment.story.pk None comment.pk %}?next={{request.get_full_path|urlencode}}" method="POST">
                             {% csrf_token %}
-                            <input type="submit" value="">
+                            <input type="submit" title="upvote comment" value="">
                         </form>
                     {% endif %}
                 </span>
@@ -18,14 +18,16 @@
             </span> <a href="{{ comment.user.get_absolute_url }}">{{ comment.user }}</a> <time datetime="{{ comment.created | date:"Y-m-d H:i:s" }}" title="{{ comment.created }}">{{ comment.created|naturaltime }}</time> | <a href="{{comment.get_absolute_url}}">link</a> | <label class="reply" for="reply-{{comment.pk}}"><a href="">reply</a></label>{% if show_story %} | on <a href="{{ comment.story.get_absolute_url }}">{{ comment.story.title }}</a>{% endif %}
             </span>
             <span class="comment">{{ comment.text }}</span>
-            <input class="reply" type="checkbox" id="reply-{{comment.pk}}" name="reply-{{comment.pk}}">
-            <form action="{% url 'reply' comment.pk %}" method="POST" class="reply-form">
-                {% csrf_token %}
-                <table>
-                    {{reply_form}}
-                </table>
-                <input type="submit" value="Submit">
-            </form>
+            {% if request.user.is_authenticated %}
+                <input class="reply" type="checkbox" id="reply-{{comment.pk}}" name="reply-{{comment.pk}}">
+                <form action="{% url 'reply' comment.pk %}" method="POST" class="reply-form">
+                    {% csrf_token %}
+                    <table>
+                        {{reply_form}}
+                    </table>
+                    <input type="submit" value="Submit">
+                </form>
+            {% endif %}
         </summary>
         {% if comment.replies.exists and not shallow %}
             <ul class="posts">
