--- a/sic/templates/comment.html
+++ b/sic/templates/comment.html
@@ -1,6 +1,6 @@
 {% load humanize %}
 
-<li class="comment">
+<li class="comment" id="{{comment.slugify}}">
     <details class="comment{% if not comment.replies.exists %} no-children{% endif %}" open="open">
         <summary>
             <span class="links"><span class="votes">
