--- a/sic/templates/base.html
+++ b/sic/templates/base.html
@@ -3,6 +3,8 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="icon" href="/static/favicon.ico">
+        <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 width=%22256%22 height=%22256%22 viewBox=%220 0 100 100%22><rect width=%22100%22 height=%22100%22 rx=%220%22 fill=%22%231e82be%22></rect><path fill=%22%23fff%22 d=%22M61.32 65.21L61.32 65.21Q61.32 61.47 58.68 59.47Q56.04 57.47 49.19 55.25Q42.33 53.03 38.33 50.88L38.33 50.88Q27.43 44.99 27.43 35.01L27.43 35.01Q27.43 29.83 30.36 25.76Q33.28 21.70 38.75 19.41Q44.22 17.13 51.03 17.13L51.03 17.13Q57.89 17.13 63.25 19.61Q68.61 22.09 71.58 26.62Q74.54 31.15 74.54 36.90L74.54 36.90L61.36 36.90Q61.36 32.51 58.59 30.07Q55.82 27.63 50.81 27.63L50.81 27.63Q45.98 27.63 43.30 29.68Q40.62 31.72 40.62 35.06L40.62 35.06Q40.62 38.18 43.76 40.29Q46.90 42.40 53.01 44.24L53.01 44.24Q64.26 47.63 69.40 52.64Q74.54 57.65 74.54 65.12L74.54 65.12Q74.54 73.42 68.26 78.15Q61.98 82.87 51.34 82.87L51.34 82.87Q43.96 82.87 37.89 80.17Q31.83 77.47 28.64 72.76Q25.46 68.06 25.46 61.87L25.46 61.87L38.68 61.87Q38.68 72.46 51.34 72.46L51.34 72.46Q56.04 72.46 58.68 70.54Q61.32 68.63 61.32 65.21Z%22></path></svg>" />
         <link rel="stylesheet" href="/static/style.css">
         <link rel="alternate" type="application/rss+xml" href="{% url 'latest_stories_rss' %}" title="Latest Stories RSS">
         <link rel="alternate" type="application/atom+xml" href="{% url 'latest_stories_atom' %}" title="Latest Stories Atom">
