--- a/sic/templates/story.html
+++ b/sic/templates/story.html
@@ -6,7 +6,7 @@
         <header>
             <h1 class="story-title"><a href="{{story.get_listing_url}}">{{ story.title }}</a></h1>
             {% include "story_tags.html" with tags=story.tags.all %}
-            <div class="links">{% if story.user.avatar %}<img class="avatar-small" src="{{story.user.avatar}}" alt="user avatar">{% endif %}{% if story.user_is_author %}authored by{% else %}via{% endif %} <a href="{{ story.user.get_absolute_url }}">{{ story.user }}</a> <time datetime="{{ story.created | date:"Y-m-d H:i:s" }}" title="{{ story.created }}">{{ story.created|naturaltime }}</time> {% if story.user == request.user %}| <a href="{% url 'edit_story' pk=story.pk slug=story.slugify %}">edit</a> {% endif%}| flag | hide | save | archived copy | <a href="{{story.get_absolute_url}}">{{ story.comments.count }} comments</a></div>
+            <div class="links">{% if story.user.avatar %}<img class="avatar-small" src="{{story.user.avatar}}" alt="user avatar">{% endif %}{% if story.user_is_author %}authored by{% else %}via{% endif %} <a href="{{ story.user.get_absolute_url }}">{{ story.user }}</a> <time datetime="{{ story.created | date:"Y-m-d H:i:s" }}" title="{{ story.created }}">{{ story.created|naturaltime }}</time> {% if story.user == request.user %}| <a href="{% url 'edit_story' story_pk=story.pk slug=story.slugify %}">edit</a> {% endif%}| flag | hide | save | archived copy | <a href="{{story.get_absolute_url}}">{{ story.comments.count }} comments</a></div>
         </header>
         <a href="{{story.url}}">{{ story.url }}</a>
         {% if story.description %}
